syntax = "proto3";
package nft;

import "google/protobuf/struct.proto";

option go_package = "phoenix-marketplace-api/types/nft";

message PriceHistoryInfo {
  uint64 timestamp = 1;
  float price = 2;
}

message PriceHistoryRequest { 
  string nft_id = 1;
  string collection_address = 2;
 }

message PriceHistoryResponse { repeated PriceHistoryInfo price_history = 1; }
